--- a/initfile.org
+++ b/initfile.org
@@ -5,10 +5,10 @@ This file contains a first attempt at organizing the loading code for emacs in o
 
 #+begin_src emacs-lisp :tangle yes
 
-(setq package-list '(el-get use-package magit dash dash-functional
+(setq package-list '(el-get magit dash dash-functional
 		     all-the-icons which-key org-journal xah-fly-keys 
-                     spaceline ob-ipython conda
-		     clojure-mode cl leuven-theme
+                     spaceline ob-ipython conda bind-key use-package
+		     clojure-mode cl leuven-theme deft org-brain
 				   cider 4clojure sourcerer-theme zenburn-theme
 				   golden-ratio org-brain sublime-themes
 				   material-theme dim))
@@ -67,6 +67,7 @@ Loading keybindings, organizational, and language specific code
 (define-key afm-org-xah-keys (kbd "s") 'org-schedule)
 (define-key afm-org-xah-keys (kbd "d") 'org-deadline)
 (define-key afm-org-xah-keys (kbd ".") 'org-timestamp)
+(define-key afm-org-xah-keys (kbd "l") 'org-set-tags-command)
 
 (define-key xah-fly-leader-key-map (kbd "o") afm-org-xah-keys)))
 
@@ -74,31 +75,50 @@ Loading keybindings, organizational, and language specific code
 
 #+end_src
 
-** Org-mode/org-brain
+** Org-mode GTD
 
 #+begin_src emacs-lisp :tangle yes
 
-; org-agenda
-
 (require 'org)
-(define-key global-map "\C-cl" 'org-store-link)
-(define-key global-map "\C-ca" 'org-agenda)
 (setq org-log-done t)
-(setq org-agenda-files (list "~/org/work.org"
-                             "~/org/programming-math.org" 
-                             "~/org/built-environments.org"
-			     "~/org/personal.org"))
 
+(setq org-refile-targets '(("~/org/gtd.org" :maxlevel . 3)
+                           ("~/org/someday.org" :level . 1)
+                           ("~/org/upcoming.org" :maxlevel . 2)))
 
+(setq org-todo-keywords '((sequence "TODO(t)" "WAITING(w)" "|" "DONE(d)" "CANCELLED(c)")))
 
+; org-agenda
+(setq org-agenda-files '("~/org/inbox.org"
+                         "~/org/gtd.org"
+                         "~/org/upcoming.org"))
 
-; org-journal
-(require 'org-journal)
-(setq org-journal-dir "~/journal")
+#+end_src
+
+** Org-brain + Deft
+
+#+begin_src emacs-lisp :tangle yes
 
 ; org-brain
+(require 'org-brain)
+(setq org-brain-path "~/org")
 (setq org-id-track-globally t)
 (setq org-id-locations-file "~/.emacs.d/.org-id-locations")
+
+; deft
+
+(require 'deft)
+(setq deft-extensions '("org"))
+(setq deft-directory ("~/org")
+(setq deft-recursive t)
+
+(defun org-brain-deft ()
+  "Use `deft' for files in `org-brain-path'."
+  (interactive)
+  (let ((deft-directory org-brain-path)
+        (deft-recursive t)
+        (deft-extensions '("org")))
+    (deft)))
 
 #+end_src
 
