--- a/initfile.org
+++ b/initfile.org
@@ -86,7 +86,13 @@ Loading keybindings, organizational, and language specific code
                            ("~/org/someday.org" :level . 1)
                            ("~/org/upcoming.org" :maxlevel . 2)))
 
-(setq org-todo-keywords '((sequence "TODO(t)" "WAITING(w)" "|" "DONE(d)" "CANCELLED(c)")))
+(setq org-todo-keywords '(
+  (sequence "TODO(t)" "WAITING(w)" "EVENT(e)" "PROJECT(p)" "|" "COMPLETE(d)"
+   "CANCELLED(c)")
+  (sequence "NOT GROOMED(b)" "OPEN(s)" "IN PROGRESS(a)" "EPIC(r)" "|"
+  "REVIEW(y)" "DONE(f)")))
+
+
 
 ; org-agenda
 (setq org-agenda-files '("~/org/inbox.org"
@@ -95,7 +101,7 @@ Loading keybindings, organizational, and language specific code
 
 #+end_src
 
-** Org-brain + Deft
+** Org-brain + Deft + Journal
 
 #+begin_src emacs-lisp :tangle yes
 
@@ -109,7 +115,7 @@ Loading keybindings, organizational, and language specific code
 
 (require 'deft)
 (setq deft-extensions '("org"))
-(setq deft-directory ("~/org")
+(setq deft-directory "~/org")
 (setq deft-recursive t)
 
 (defun org-brain-deft ()
@@ -119,6 +125,11 @@ Loading keybindings, organizational, and language specific code
         (deft-recursive t)
         (deft-extensions '("org")))
     (deft)))
+
+; org-journal
+(setq org-journal-dir "~/org/journal")
+(require 'org-journal)
+
 
 #+end_src
 
@@ -226,6 +237,15 @@ Adjusting the visual styling.
    (buffer-face-mode "β")
    (whitespace-mode    " _"  whitespace)
    (paredit-mode       " ()" paredit)))
+
+; org mode keywords
+(setq org-todo-keyword-faces
+  '(("TODO" . org-warning)
+   ("WAITING" . (:background "orange" :foreground "dim grey"))
+   ("EVENT" . (:background "grey" :foreground "dim grey"))
+   ("PROJECT" . (:background "deep sky blue" :foreground "dim grey"))
+   ("DONE" . (:background "green" :foreground "dim grey"))
+   ("CANCELLED" .  (:background "yellow" :foreground "dim grey"))))
 
 
 
