--- a/initfile.org
+++ b/initfile.org
@@ -7,7 +7,7 @@ This file contains a first attempt at organizing the loading code for emacs in o
 
 (setq package-list '(el-get magit dash dash-functional
 		     all-the-icons which-key org-journal xah-fly-keys 
-                     spaceline ob-ipython conda bind-key use-package
+                     spaceline ob-ipython conda bind-key use-package pyvenv
 		     clojure-mode cl leuven-theme deft org-brain typit
 				   cider 4clojure sourcerer-theme zenburn-theme
 				   golden-ratio org-brain sublime-themes
@@ -76,7 +76,7 @@ Loading keybindings, organizational, and language specific code
 (define-key afm-org-xah-keys (kbd "d") 'org-deadline)
 (define-key afm-org-xah-keys (kbd ".") 'org-timestamp)
 (define-key afm-org-xah-keys (kbd "l") 'org-set-tags-command)
-
+(define-key afm-org-xah-keys (kbd "p") 'org-priority)
 (define-key xah-fly-leader-key-map (kbd "o") afm-org-xah-keys)))
 
 
@@ -178,7 +178,10 @@ Loading keybindings, organizational, and language specific code
 
 ;; changing default conda path
 (custom-set-variables
-  '(conda-anaconda-home "/home/afm/.conda"))
+  '(conda-anaconda-home "/home/afm/miniconda3/"))
+
+
+
 
 ;; if you want interactive shell support, include:
 (conda-env-initialize-interactive-shells)
