--- a/initfile.org
+++ b/initfile.org
@@ -82,6 +82,8 @@ Loading keybindings, organizational, and language specific code
 (define-key afm-org-xah-keys (kbd "l") 'org-set-tags-command)
 (define-key afm-org-xah-keys (kbd "r") 'org-refile)
 (define-key afm-org-xah-keys (kbd "p") 'org-priority)
+(define-key afm-org-xah-keys (kbd "i") 'org-id-get-create)
+(define-key afm-org-xah-keys (kbd "n") 'anki-editor-insert-note)
 
 (define-key xah-fly-leader-key-map (kbd "o") afm-org-xah-keys)))
 
@@ -286,7 +288,7 @@ Adjusting the visual styling.
         `(highlight ((,class (:foreground ,fg3 :background ,bg3))))
 	`(hl-line ((,class (:background  ,bg2))))
 	`(fringe ((,class (:background ,bg2 :foreground ,fg4))))
-	`(cursor ((,class (:background ,bg3))))
+	`(cursor ((,class (:background ,keyword))))
         `(show-paren-match-face ((,class (:background ,warning))))
         `(isearch ((,class (:bold t :foreground ,warning :background ,bg3))))
         `(mode-line ((,class (:box (:line-width 1 :color nil) :bold t :foreground ,fg4 :background ,bg2))))
@@ -509,7 +511,7 @@ Adjusting the visual styling.
         `(highlight ((,class (:foreground ,fg3 :background ,bg3))))
 	`(hl-line ((,class (:background  ,bg2))))
 	`(fringe ((,class (:background ,bg2 :foreground ,fg4))))
-	`(cursor ((,class (:background ,bg3))))
+	`(cursor ((,class (:background ,keyword))))
         `(show-paren-match-face ((,class (:background ,warning))))
         `(isearch ((,class (:bold t :foreground ,warning :background ,bg3))))
         `(mode-line ((,class (:box (:line-width 1 :color nil) :bold t :foreground ,fg4 :background ,bg2))))
@@ -701,7 +703,7 @@ Adjusting the visual styling.
 
 (load-file "~/.emacs.d/rusted-city-theme.el")
 (load-file "~/.emacs.d/wold-theme.el")
-(load-theme 'wold-theme t)
+(load-theme 'wold t)
 
 ;; Setting font and line-height defaults
 
