--- a/initfile.org
+++ b/initfile.org
@@ -10,7 +10,8 @@ This file contains a first attempt at organizing the loading code for emacs in o
                      spaceline ob-ipython conda bind-key use-package
 		     clojure-mode cl leuven-theme deft org-brain typit
                      sdcv flycheck writeroom-mode anki-editor
-                     atomic-chrome nov org-noter pdf-tools
+                     atomic-chrome pdf-tools
+                                   nov org-noter
 				   cider 4clojure sourcerer-theme zenburn-theme
 				   golden-ratio htmlize sublime-themes
 				   material-theme dim))
@@ -159,7 +160,7 @@ Exporting org mode to other formats
 
 (require 'deft)
 (setq deft-extensions '("org"))
-(setq deft-directory "~orgbrain")
+(setq deft-directory "~/orgbrain")
 (setq deft-recursive t)
 
 (defun org-brain-deft ()
