Updating org-capture templates with inactive timestamps

--- a/initfile.org
+++ b/initfile.org
@@ -145,13 +145,13 @@ Tools for working with Git (and Github) from within GNU Emacs.
 (setq org-default-notes-file (concat org-directory "/inbox.org"))
 (setq org-capture-templates
  '(("t" "Todo" entry (file+olp "~/org/inbox.org" "Tasks")
-        "* TODO %?\n:PROPERTIES:\n:CREATED: %t\n:END:\n"
+        "* TODO %?\n:PROPERTIES:\n:CREATED: %u\n:END:\n"
         :empty-lines 1)
 ("n" "Note" entry (file+olp "~/org/inbox.org" "Notes")
-        "* NOTE %?\n:PROPERTIES:\n:CREATED: %t\n:END:\n"
+        "* NOTE %?\n:PROPERTIES:\n:CREATED: %u\n:END:\n"
         :empty-lines 1)
    ("m" "Memorize" entry (file+olp "~/org/inbox.org" "Facts") 
-        "* %? \t :note:\n :PROPERTIES: \n :CREATED: %t \n :ANKI_NOTE_TYPE: Basic \n :END: \n** Front\n\n** Back"
+        "* %? \t :note:\n :PROPERTIES: \n :CREATED: %u \n :ANKI_NOTE_TYPE: Basic \n :END: \n** Front\n\n** Back"
         :empty-lines 1))) 
 #+end_src
 
@@ -200,9 +200,10 @@ Exporting org mode to other formats
 (org-babel-do-load-languages
  'org-babel-load-languages
  '((ipython . t)
+   (shell .t)
    (clojure . t)
    (python . t)
-   (scala .t )))
+   (scala . t)))
 
 (setq org-src-tab-acts-natively t)
 
